tests/NormalTests/paczka1/fuzzy1/73695865.err
Error in line 4: hWYyPxb A528 38,8
Error in line 10: hWYyPxb S871 15,6
Error in line 16: mHLaz A35| 67,6
Error in line 14: mHLaz A528 81,7
Error in line 17: mHLaz A351 166,3
Error in line 27: hWYyPxb A351 0,2
